<resources>
    <string name="app_name">portfolioTest</string>
    <string name="title_about">About</string>
    <string name="title_services">Services</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_testimonials">Testimonials</string>
    <string name="appMainTitle">lloydieieieie</string>
    <string name="greetings">Nice to meet you</string>
    <string name="name">Objero, L.A(Lloyd)</string>
    <string name="currentyear">4th year IT student</string>
    <string name="greetings2">OH, HELLO THERE</string>
    <string name="info1">Currently a 4th year IT student from PUP. I find satisfaction in developing small programs and solving problems through coding. Myinterest in learning new technology extends beyond the classroom andI always find a room to improve my coding skills and problem solving skills.I am an individual  who approaches challenges that is logical and doable andnot afraid to take on different task.
    </string>
    <string name="whatido">WHAT I DO. . . </string>
    <string name="info2">Worked and created a variety of projects such as a mobile app and web-based systems. Familiar with backend languages such as C# and Java which helped me improve my knowledge and skills in creating reliable solutions. I also learned and continously doing side projects using Rust. Proficient in designing databases to meet company needs and ensure data is stored and processed safely and accurately. I enjoy tackling challenges, learning new things and collaborative work.
    </string>
    <string name="hobbies">Aside from exploring new technologies and coding. Outside of programming, I also enjoy reading books and manga and recently enjoyed a book by Meg Jay titled "The Defining Decade: Why Your Twenties Matter". I also play some online games and a lot of indie games such as Hades and Hollow Knight since I find relaxation in exploring new worlds and discovering strategies. I also do astrophotography if i have free time and the weather condition is good. I sometimes setup my telescope and camera and enjoy the view. Lastly, I also love eating and discovering newplaces to enjoy viewing the surroundings while eating.</string>
    <string name="whatido2">WHAT I DO OUTSIDE OF CODING. . . </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>