<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="410dp"
            android:layout_height="250dp"
            android:layout_marginTop="0dp"
            android:background="@color/subcolor8"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_extrabold"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:textSize="20dp"

            android:textColor="@color/black"
            android:text="@string/greetings"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:drawableStartCompat="@drawable/baseline_waving_hand_24"
            android:drawablePadding="8dp"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="100dp"

            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.14" />

        <TextView
            android:id="@+id/textView5"
            android:fontFamily="@font/montserrat_extrabolditalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.281" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:textSize="14sp"
            android:text="@string/currentyear"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_extrabold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/greetings2"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:layout_marginBottom="6dp"
            android:lineSpacingExtra="4dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_regular"
            android:justificationMode="inter_word"
            android:text="@string/info1"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/whatido"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/montserrat_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:text="@string/info2"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/whatido2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:lineSpacingExtra="4dp"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular"
            android:justificationMode="inter_word"
            android:text="@string/hobbies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
